mdd.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: workload
  name: workload
spec:
  restartPolicy: Never
  containers:
    - name: java-kafka-producer
      #image: docker.io/mezzeddine/producerftest:v0  #produceroldgrpc:v1
      #image: docker.io/mezzeddine/omgrpc:v3
      #image: docker.io/mezzeddine/producertaxigrpc:v1
      image: docker.io/mezzeddine/produceroldgrpc:v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency
          #image: docker.io/mezzeddine/consumerteshrine:v0
          #image: docker.io/mezzeddine/consumerteshrine:v1  #sk
          image: docker.io/mezzeddine/consumerrebalgo1:v1 #consumercustomer:v0


          ports:
          - containerPort: 8080
            name: brom
