producerconsumer15.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: workload
  name: workload
spec:
  restartPolicy: Never
  containers:
    - name: java-kafka-producer
      #image: docker.io/mezzeddine/producerftest:v0  #produceroldgrpc:v1
      #image: docker.io/mezzeddine/omgrpc:v3
      #image: docker.io/mezzeddine/producertaxigrpc:v1
      #image: docker.io/mezzeddine/produceroldgrpc:v1
      #image: docker.io/mezzeddine/taxiproducernew:v2
      #image: docker.io/mezzeddine/taxiproducernew:v3   # this, batch
      #image: docker.io/mezzeddine/taxitimely:v0  #timely producer
      #image: docker.io/mezzeddine/taxiuniform:v2  #timely producer
      image: docker.io/mezzeddine/taxibatch100:v1




---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency
spec:
  replicas: 15
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency
          #image: docker.io/mezzeddine/consumerteshrine:v0
          #image: docker.io/mezzeddine/consumerteshrine:v1  #sk
          #image: docker.io/mezzeddine/consumerrebalgo1:v1 #consumercustomer:v0
          #image: docker.io/mezzeddine/consumercustomer:v0  #bp
          #image: docker.io/mezzeddine/consumer500sticky:v0
          #image: docker.io/mezzeddine/consumer2000sticky:v1
          #image: docker.io/mezzeddine/consumer2000sbp:v1
          #image: docker.io/mezzeddine/consumereventssticky:v0
          #image: docker.io/mezzeddine/consumersti:v0
          image: docker.io/mezzeddine/consumerbp:v00








          ports:
          - containerPort: 8080
            name: brom
