producerstream10.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: workload
  name: workload
spec:
  restartPolicy: Never
  containers:
    - name: java-kafka-producer
      image: docker.io/mezzeddine/twitterproducer:v1  #taxiproducernew:v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency
spec:
  replicas: 2
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency

          #image: docker.io/mezzeddine/twittertopo:v9 #consumerbp:v00

          image: docker.io/mezzeddine/twittertopo:v10 #consumerbp:v00


          ports:
          - containerPort: 8080
            name: brom
