producerinterceptor.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: workload
  name: workload
spec:
  restartPolicy: Never
  containers:
    - name: java-kafka-producer
      image: docker.io/mezzeddine/produceroldgrpc:v1   #twitterproducer:v1  #taxiproducernew:v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency
          #image: docker.io/mezzeddine/twittertopo:v9 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist:v1   #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist:v2   #twittertopo:v10 #consumerbp:v00
          image: docker.io/mezzeddine/interceptordist12:v0   #twittertopo:v10 #consumerbp:v00


          ports:
          - containerPort: 8080
            name: brom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency
          #image: docker.io/mezzeddine/twittertopo:v9 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist:v1   #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist23:v0   #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist2307:v1  #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist23:v1  #twittertopo:v10 #consumerbp:v00

          image: docker.io/mezzeddine/interceptordist23:v00



          ports:
            - containerPort: 8080
              name: brom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: latency
  name: latency3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency
  template:
    metadata:
      labels:
        app: latency
    spec:
      containers:
        - name: latency
          #image: docker.io/mezzeddine/twittertopo:v9 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist:v1   #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist23:v0   #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist2307:v1  #twittertopo:v10 #consumerbp:v00
          #image: docker.io/mezzeddine/interceptordist23:v1  #twittertopo:v10 #consumerbp:v00

          image: docker.io/mezzeddine/interceptordist3:v0



          ports:
            - containerPort: 8080
              name: brom
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: grpcassignmentserver
  name: controllerandscaler
spec:
  restartPolicy: Never
  containers:
    - name: controllerandscaler
      #image: docker.io/mezzeddine/controllergraphbf:v1
      #image: docker.io/mezzeddine/controllergraphbf:v2
      image: docker.io/mezzeddine/controllergraphbf:v3


      ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: assignmentservice #arrivalservice #assignmentservice
spec:
  selector:
    app: grpcassignmentserver
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
