ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafananodeport
  labels:
    app: strimzi
spec:
  ports:
  - name: grafana
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    name: grafana
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafananodeport
            port:
              number: 80
